--- a/MAIL/index.html
+++ b/MAIL/index.html
@@ -11,7 +11,8 @@
 
 
 
-
-    <script src="./js/script.js"></script>
+     <!-- SCRIPT -->
+        <script src="./js/script.js"></script>
+     <!-- /SCRIPT -->
 </body>
 </html>
