--- a/MAIL/index.html
+++ b/MAIL/index.html
@@ -10,9 +10,17 @@
 </head>
 
 <body>
+    <div class="container">
+        <div class="box">
+            <div class="mail-box">
+                <label for="mail">Inerisci la tua mail</label>
+                <input type="email" id="mail">
+                <button id="enter">VAI</button>
+            </div>
+            <div id="idoneo"></div>
+        </div>
 
-        <div id="idoneo"></div>
-        
+    </div>
     <!-- SCRIPT -->
     <script src="./js/script.js"></script>
     <!-- /SCRIPT -->
