--- a/DADI/index.html
+++ b/DADI/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,12 +8,20 @@
     <!-- STYLE -->
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
-    
-
-
-     <!-- SCRIPT -->
-        <script src="./js/script.js"></script>
-     <!-- /SCRIPT -->
+    <div class="container">
+        <h1>IL GIUCO DEI DADI</h1>
+        <div class="dice-container">
+            <div class="dice" id="user-dice">PLAYER</div>
+            <div class="dice" id="computer-dice">PC</div>
+        </div>
+        <button id="btn">LANCIA I DADI</button>
+        <div id="result"></div>
+    </div>
+    <!-- SCRIPT -->
+    <script src="./js/script.js"></script>
+    <!-- /SCRIPT -->
 </body>
+
 </html>
